--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <li class="nav-el"><a href="#" class="logo" id="jhlogo">
                 <img id="logo" src="css/images/jhsereno-light2.png" alt="jhsereno-logo">
             </a></li>
-            <li class="nav-el"><a href="#">Search for Homes</a></li>
-            <li class="nav-el"><a href="#">Homes Across America</a></li>
-            <li class="nav-el"><a href="#">Home Valuation</a></li>
+            <li class="nav-el"><a href="#">Search</a></li>
+            <li class="nav-el"><a href="#">Lorem</a></li>
+            <li class="nav-el"><a href="#">Lorem</a></li>
             <li class="nav-el"><a href="#">Services</a></li>
             <li class="nav-el dropdown">
                 <a href="#">About Us</a>
@@ -53,25 +53,25 @@
 
     <div class="header">
         <h1>SERVICES</h1>
-        <p>Ready to find your dream home?</p>
+        <p>Ready to find your dream?</p>
         <div class="container-btn">
-            <a href="#" class="appointment-btn">Book an Appointment</a>
+            <a href="#" class="appointment-btn">Button</a>
         </div>
     </div>
     <div class="container">
         <div class="container-intro">
             <div class="intro-title">
-                <h1>Comprehensive Marketing Plan</h1>
+                <h1>Comprehensive Design</h1>
             </div>
             <section class="services">
                 <div class="service-card">
                     <img src="css/images/responsive.svg" alt="Responsive Service" class="service-image">
                     <h2>Responsive</h2>
-                    <p>I am always available via phone, text, or email.</p>
+                    <p>Designs conform to any devices.</p>
                 </div>
                 <div class="service-card">
                     <img src="css/images/syndication.svg" alt="Syndication Service" class="service-image">
-                    <h2>Syndication</h2>
+                    <h2>User Friendly</h2>
                     <p>I market your property locally, nationally, and internationally.</p>
                 </div>
                 <div class="service-card">
@@ -116,28 +116,28 @@
         <div class="container-selling">
             <div class="sell-padding">
             <div class="sell-title">
-                <h1>Selling Process</h1>
+                <h1>Lorem ipsum</h1>
             </div>
             <section class="sell">
                 <div class="sell-card">
                     <h1>1.</h1>
-                    <h3>Initial Consultation & Planning</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="sell-card">
                     <h1>2.</h1>
-                    <h3>Devise & Execute Marketing Plan</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="sell-card">
                     <h1>3.</h1>
-                    <h3>Review Offers & Reach Agreement with Buyer</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="sell-card">
                     <h1>4.</h1>
-                    <h3>Complete Transaction Process</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="sell-card">
                     <h1>5.</h1>
-                    <h3>After - Sale Service</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </section>
             </div>
@@ -146,24 +146,24 @@
         <div class="container-buying">
             <div class="buy-padding">
             <div class="buy-title">
-                <h1>Buying Process</h1>
+                <h1>Lorem ipsum</h1>
             </div>
             <section class="buy">
                 <div class="buy-card">
                     <h1>1.</h1>
-                    <h3>Initial Consultation & Planning</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="buy-card">
                     <h1>2.</h1>
-                    <h3>Search for a Home & Get Pre-Approved</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="buy-card">
                     <h1>3.</h1>
-                    <h3>Submit an Offer</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
                 <div class="buy-card">
                     <h1>4.</h1>
-                    <h3>Complete Settlement Process</h3>
+                    <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </section>
             </div>
